# prompt-organizer

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: lib.rs
tests/panic/: requires_function_name_and_prompt.rs  requires_function_name_and_prompt.stderr  requires_named_args.rs  requires_named_args.stderr
